namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: htb
  labels:
    name: htb
