empire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: empire
    labels:
      app: empire
spec:
    replicas: 1
    selector:
        matchLabels:
            app: empire
    template:
        metadata:
            labels:
                app: empire
        spec:
            nodeSelector:
              storage: 02
            volumes:
                - name: tools
                  configMap:
                    name: tools

                - name: vpn-config
                  secret:
                    secretName: vpn-config
                    items:
                      - key: vpn.ovpn
                        path: vpn.ovpn

                - name: route-script
                  configMap:
                    name: opnevpn-script
                    items:
                      - key: route-override.sh
                        path: route-override.sh

                - name: install-script
                  configMap:
                    name: kali-insall-script
                    items:
                      - key: install.sh
                        path: install.sh

                - name: empire-install-script
                  configMap:
                    name: empire-insall-script
                    items:
                      - key: install.sh
                        path: install.sh

                - name: busybox-script
                  configMap:
                    name: buisybox-insall-script
                    items:
                      - key: install.sh
                        path: install.sh

                - name: tmux-conf
                  configMap:
                    name: tmux
                    items:
                      - key: .tmux.conf
                        path: .tmux.conf

                - name: tmp
                  emptyDir: {}

                - name: thm-storage
                  hostPath:
                    path: /disk1/kubernetes/HTB
                    type: Directory

                - name: git-storage
                  hostPath:
                    path: /disk1/kubernetes/Kali/Git
                    type: Directory

                - name: empire-storage
                  hostPath:
                    path: /disk1/kubernetes/Empire
                    type: Directory

            dnsConfig:
              nameservers:
                - 8.8.8.8
            containers:
                - name: empire
                  image: oonray/c2:latest
                  command: ["powershell-empire", "--rest"]
                  securityContext:
                      privileged: true
                      capabilities:
                        add:
                          - NET_ADMIN
                  volumeMounts:
                    - name:  tmp
                      mountPath:  /tmp
                    - name: thm-storage
                      mountPath: /opt/HTB
                    - name: git-storage
                      mountPath: /opt/git
                  tty: true
                  stdin: true
                  resources:
                    limits:
                      memory: "200Mi"
                      cpu: "0.25"
                  ports:
                    - containerPort: 1337

                - name: openvpn
                  image: dperson/openvpn-client
                  tty: true
                  stdin: true
                  command: ["/bin/sh","-c"]
                  args: ["openvpn --config '/vpn/vpn.ovpn' --script-security 3"]
                  securityContext:
                      privileged: true
                      capabilities:
                        add:
                          - NET_ADMIN
                  volumeMounts:
                    - name:  vpn-config
                      mountPath:  /vpn/vpn.ovpn
                      subPath: vpn.ovpn
                    - name: tmp
                      mountPath: /tmp/route
                  resources:
                    limits:
                      memory: "1Gi"
                      cpu: "0.5"
