kali-endgame.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: kali-endgame
    labels:
      app: kali-endgame
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kali-endgame
    template:
        metadata:
            labels:
                app: kali-endgame
        spec:
            dnsConfig:
              nameservers:
                - 8.8.8.8
            volumes:
                - name: tools
                  configMap:
                    name: tools

                - name: vpn-config-endgame
                  secret:
                    secretName: vpn-config-endgame
                    items:
                      - key: vpn.ovpn
                        path: vpn.ovpn

                - name: install-script
                  configMap:
                    name: kali-insall-script
                    items:
                      - key: install.sh
                        path: install.sh

                - name: tmux-conf
                  configMap:
                    name: tmux
                    items:
                      - key: .tmux.conf
                        path: .tmux.conf

                - name: goproxy
                  configMap:
                    name: goproxy
                    items:
                      - key: proxy.go
                        path: proxy.go

                - name: goforward
                  configMap:
                    name: goforward
                    items:
                      - key: forward.go
                        path: forward.go

                - name: tmp
                  emptyDir: {}

            hostAliases:
              - ip: 10.10.10.21
                hostnames:
                  - joker.htb
            containers:
                - name: kali-endgame
                  image: oonray/kali
                  tty: true
                  stdin: true
                  command: ["/bin/sh"]
                  volumeMounts:
                    - name: goproxy
                      mountPath: /data/proxy/proxy.go
                      subPath: proxy.go
                    - name: goforward
                      mountPath: /data/forward/forward.go
                      subPath: forward.go
                  ports:
                    - containerPort: 8081

                - name: openvpn
                  image: ghcr.io/wfg/openvpn-client
                  securityContext:
                    privileged: true
                  volumeMounts:
                    - name: vpn-config-endgame
                      mountPath:  /data/vpn/vpn.ovpn
                      subPath: vpn.ovpn
                  ports:
                    - containerPort: 1080

                  resources:
                    limits:
                      memory: "1Gi"
                      cpu: "0.5"
