service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: ClusterIP
  selector:
    app: kali
  ports:
    - name: "prox"
      protocol: TCP
      port: 1080
    - name: "8081"
      protocol: TCP
      port: 8081
      targetPort: 8080
