ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: zap-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "htb.anoovah.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-ui
              port: 
                number: 8081

    - host: "empire.anoovah.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-ui
              port: 
                number: 1337

    - host: "covenant.anoovah.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxy-ui
              port: 
                number: 7443
